2011-02-23  Werner Koch  <wk@g10code.com>

	* Makefile.am (LDADD): Move LIBREADLINE to ..
	(gpg_LDADD): here.  Fixes bug#1318.
	* gpgv.c (rl_cleanup_after_signal, rl_free_line_state): New stubs.

2010-10-29  David Shaw  <dshaw@jabberwocky.com>

	* gpg.c (main): Do not provide a default for
	--personal-digest-preferences.  This allows the usual digest
	selection algorithm to pick a digest based on recipient keys.

	* pkclist.c (select_algo_from_prefs): Make sure the scores can't
	overflow when picking an algorithm (not a security issue since we
	can't pick something not present in all preference lists, but we
	might pick something that isn't scored first choice).

	* pkclist.c (select_algo_from_prefs): Slightly improve the
	handling of MD5 in preference lists.  Instead of replacing MD5
	with SHA-1, just remove MD5 from the list altogether, and let the
	next-highest ranked algorithm be chosen.

2010-10-27  Werner Koch  <wk@g10code.com>

	* keygen.c (ask_expire_interval): Print 2038 warning only for 32
	bit signed time_t.
	* keyid.c (mk_datestr): Do the y2038 test only for a signed time_t.
	(INVALID_TIME_CHECK): New.

2010-10-20  Werner Koch  <wk@g10code.com>

	* encr-data.c (decode_filter): Cast -1 to size_t.  Reported by
	Steven M. Schweda.
	* parse-packet.c (parse_key): Ditto.
	* trustdb.c (validate_keys): Likewise to unsigned int.

2010-10-18  Werner Koch  <wk@g10code.com>

	* app-openpgp.c (parse_algorithm_attribute): Remove extra const in
	definition of DESC.

2010-10-10  Werner Koch  <wk@g10code.com>

	* keyring.c (create_tmp_file): Use GNUPG_TMP_SFX anf GNUPG_BAK_SFX.

2010-09-28  David Shaw  <dshaw@jabberwocky.com>

	* options.skel: Make the example for force-v3-sigs match
	reality (it has defaulted to off since 2007-10-22).

2010-09-28  Steven M. Schweda  <sms@antinode.info>  (wk)

	Changes to help the VMS port. See
	http://antinode.info/dec/sw/gnupg.html .

	* gpgv.c (ttyfp_is, init_ttyfp) [__VMS]: Add stubs.